--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,7 +19,9 @@ android {
     }
 }
 
-dependencies {
+dependencies
+{
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:support-v4:20.0.0'
+    compile 'com.mcxiaoke.volley:library:1.0.6'
 }
