--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@android:drawable/ic_menu_recent_history"
         android:label="@string/app_name"
         android:theme="@style/AppTheme"
         android:name=".ApplicationWrapper">
