--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,4 +24,5 @@ dependencies
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:support-v4:20.0.0'
     compile 'com.mcxiaoke.volley:library:1.0.6'
+    compile 'com.jjoe64:graphview:3.1.3'
 }
