--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,7 @@
         android:theme="@style/AppTheme"
         android:name=".ApplicationWrapper">
         <activity
+            android:configChanges="locale"
             android:name=".MainActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait">
