--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,21 +1,30 @@
+buildscript {
+    repositories {
+        maven { url 'http://download.crashlytics.com/maven' }
+    }
+
+    dependencies {
+        classpath 'com.crashlytics.tools.gradle:crashlytics-gradle:1.+'
+    }
+}
 apply plugin: 'com.android.application'
+apply plugin: 'crashlytics'
+
+repositories {
+    maven { url 'http://download.crashlytics.com/maven' }
+}
+
 
 android {
-    compileSdkVersion 20
-    buildToolsVersion "20.0.0"
+    compileSdkVersion 19
+    buildToolsVersion "19.1.0"
 
     defaultConfig {
         applicationId "ru.hyperboloid.emotracker"
         minSdkVersion 15
-        targetSdkVersion 20
-        versionCode 1
+        targetSdkVersion 19
+        versionCode 2
         versionName "1.0"
-    }
-    buildTypes {
-        release {
-            runProguard false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-        }
     }
 }
 
@@ -25,4 +34,5 @@ dependencies
     compile 'com.android.support:support-v4:20.0.0'
     compile 'com.mcxiaoke.volley:library:1.0.6'
     compile 'com.jjoe64:graphview:3.1.3'
+    compile 'com.crashlytics.android:crashlytics:1.+'
 }
