--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,10 +29,10 @@ android {
 }
 
 dependencies
-{
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:support-v4:20.0.0'
-    compile 'com.mcxiaoke.volley:library:1.0.6'
-    compile 'com.jjoe64:graphview:3.1.3'
-    compile 'com.crashlytics.android:crashlytics:1.+'
-}
+        {
+            compile fileTree(dir: 'libs', include: ['*.jar'])
+            compile 'com.android.support:support-v4:20.0.0'
+            compile 'com.mcxiaoke.volley:library:1.0.6'
+            compile 'com.crashlytics.android:crashlytics:1.+'
+            compile project(':GraphView')
+        }
