--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@android:drawable/ic_menu_recent_history"
+        android:icon="@drawable/like"
         android:label="@string/app_name"
         android:theme="@style/AppTheme"
         android:name=".ApplicationWrapper">
